my-apps-disabled/development/dvwa/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dvwa-route
  namespace: dvwa
  labels:
    external-dns: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: "tuxgrid.com"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "dvwa.tuxgrid.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: dvwa
          port: 80
          weight: 1
